<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="edu.calpoly.nnegrey.baby8alpha.Remote">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/effects"
        android:textAlignment="center"
        android:textSize="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/buttonTurnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonLeft"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonTurnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonRight"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/buttonSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSound"/>

        <Button
            android:id="@+id/buttonLighter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonLighter"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robotVelocity"
            android:textAlignment="center"
            android:textSize="24dp"
            android:paddingRight="8dp"/>

        <TextView android:id="@+id/textViewVelocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentVelocity"
            android:textAlignment="center"
            android:textSize="24dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/layout_joystick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/image_button_bg"
        android:layout_gravity="center_horizontal">
    </RelativeLayout>

</LinearLayout>
