<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".CreatePatternEffect">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createPatternEffectMessage"
        android:textAlignment="center"
        android:textSize="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/buttonCreateEffectLighter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonLighter"/>

    <Button
        android:id="@+id/buttonCreateEffectSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonSound"/>

</LinearLayout>