<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".CreatePatternCommand">
    <!--Direction-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/createPatternCommandDirection"
                android:gravity="center"
                android:padding="16dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.triggertrap.seekarc.SeekArc
                    android:id="@+id/createPatternCommandSeekArcDirection"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    android:padding="40dp"
                    seekarc:rotation="0"
                    seekarc:startAngle="0"
                    seekarc:sweepAngle="360"
                    seekarc:touchInside="true"
                    seekarc:arcColor="@color/colorAccent"
                    seekarc:progressWidth="2dp"
                    seekarc:arcWidth="2dp"
                    seekarc:progressColor="@color/colorAccent"
                    seekarc:max="360"/>

            </FrameLayout>
        </LinearLayout>
        <!--Speed-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createPatternCommandVelocity"
                android:padding="16dp"/>

            <RadioGroup
                android:id="@+id/createPatternCommandRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/createPatternCommandRadioButtonSpeed1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:button="@null"
                    android:drawableBottom="@android:drawable/btn_radio"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:drawableTint="@color/colorAccent"
                    android:buttonTint="@color/darkColorAccent"
                    android:layout_weight="1" />
                <RadioButton
                    android:id="@+id/createPatternCommandRadioButtonSpeed2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:button="@null"
                    android:drawableBottom="@android:drawable/btn_radio"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:drawableTint="@color/colorAccent"
                    android:buttonTint="@color/darkColorAccent"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/createPatternCommandRadioButtonSpeed3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:button="@null"
                    android:drawableBottom="@android:drawable/btn_radio"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:drawableTint="@color/colorAccent"
                    android:buttonTint="@color/darkColorAccent"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/createPatternCommandRadioButtonSpeed4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:button="@null"
                    android:drawableBottom="@android:drawable/btn_radio"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:drawableTint="@color/colorAccent"
                    android:buttonTint="@color/darkColorAccent"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/createPatternCommandRadioButtonSpeed5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:button="@null"
                    android:drawableBottom="@android:drawable/btn_radio"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:drawableTint="@color/colorAccent"
                    android:buttonTint="@color/darkColorAccent"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
        <!--Duration-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createPatternCommandDuration"
                android:padding="16dp"/>
            <!--Motor offsets multiply by 10-->
            <EditText
                android:id="@+id/createPatternCommandEditTextDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/createPatternCommandDurationHint"/>

        </LinearLayout>
        <!--Head-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/createPatternCommandHead"
                android:padding="16dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.triggertrap.seekarc.SeekArc
                    android:id="@+id/createPatternCommandSeekArcHead"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:padding="30dp"
                    seekarc:rotation="0"
                    seekarc:startAngle="0"
                    seekarc:sweepAngle="360"
                    seekarc:touchInside="true"
                    seekarc:arcColor="@color/colorAccent"
                    seekarc:progressWidth="2dp"
                    seekarc:arcWidth="2dp"
                    seekarc:progressColor="@color/colorAccent"
                    seekarc:max="360"/>

            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/createPatternCommandSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="@color/colorPrimary"
                android:text="@string/buttonSave"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>